--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   google_fonts: ^1.1.0
   hexcolor: ^2.0.3
   math_expressions: ^2.0.0
+  http: ^0.12.2
+  shared_preferences: ^0.5.12+4
+  intl: ^0.17.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
