--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   http: ^0.12.2
   shared_preferences: ^0.5.12+4
   intl: ^0.17.0
+  cloud_firestore: ^0.14.3
+  firebase_core: ^0.5.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
